--- a/demos/app/dialog/sample.component.css
+++ b/demos/app/dialog/sample.component.css
@@ -1,3 +1,15 @@
 [igxButton] {
     max-width: 200px;
 }
+
+.login-form {
+    padding: 24px;
+}
+
+.icon {
+    font-size: .75em;
+}
+
+igx-input-group+igx-input-group {
+    margin-top: 24px;
+}
