--- a/demos/app/list-performance/sample.component.html
+++ b/demos/app/list-performance/sample.component.html
@@ -1,29 +1,31 @@
 <div class="list-sample">
     <article class="sample-column" [style.width]="'500px'">
-            <h4 class="sample-title">Performance sample</h4>
-            <div class="igx-form-group">
-                <input class="igx-form-group__input--search" placeholder="Search Contacts" [(ngModel)]="search1" />
-                <label igxLabel>
-                    <igx-icon fontSet="material" name="search"></igx-icon>
-                </label>
-                <span class="igx-form-group__clear--hidden">
-                    <igx-icon fontSet="material" name="clear"></igx-icon>
-                </span>
-            </div>
-            <div class="list-sample">
-                <igx-list>
-                    <igx-list-item [isHeader]="true">Contacts</igx-list-item>
-                    <div [style.height]="'518px'">
-                        <igx-list-item igxRipple="pink" igxRippleTarget=".igx-list__item"
-                        *igxFor="let item of data | igxFilter: fo1; scrollOrientation : 'vertical'; containerSize: '500px'; itemSize: '50px'">
-                            <div class="item">
-                                <igx-avatar [src]="item.avatar" roundShape="true"></igx-avatar>
-                                <span igxLabel>{{item.text}}</span>
-                                <igx-icon name="star" [class.favorite]="item.favorite"></igx-icon>
-                            </div>
-                        </igx-list-item>
-                    </div>
-                </igx-list>
-            </div>
+        <h4 class="sample-title">Performance sample</h4>
+
+        <igx-input-group type="search" style="margin-bottom: 16px">
+            <igx-prefix>
+                <igx-icon>search</igx-icon>
+            </igx-prefix>
+            <input #searchContacts igxInput type="text" placeholder="Search Contacts" [(ngModel)]="search1">
+            <igx-suffix *ngIf="searchContacts.value.length > 0" (click)="search1 = ''">
+                <igx-icon>clear</igx-icon>
+            </igx-suffix>
+        </igx-input-group>
+
+        <div class="list-sample">
+            <igx-list>
+                <igx-list-item [isHeader]="true">Contacts</igx-list-item>
+                <div [style.height]="'518px'">
+                    <igx-list-item igxRipple="pink" igxRippleTarget=".igx-list__item" *igxFor="let item of data | igxFilter: fo1; scrollOrientation : 'vertical'; containerSize: '500px'; itemSize: '50px'">
+                        <div class="item">
+                            <igx-avatar [src]="item.avatar" roundShape="true"></igx-avatar>
+                            <span igxLabel>{{item.text}}</span>
+                            <igx-icon name="star" [class.favorite]="item.favorite"></igx-icon>
+                        </div>
+                    </igx-list-item>
+                </div>
+            </igx-list>
+        </div>
+
     </article>
 </div>
