--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -55,11 +55,14 @@
 </div>
 
 <div *ngIf="resizer.show" igxDrag
+      [restrictDrag]="dragDirection"
+      [restrictHDragMin]="restrictResizeMin"
+      [restrictHDragMax]="restrictResizeMax"
       (dragStart)="startResizing($event)"
       (dragEnd)="resize($event)"
       [style.left.px]="resizer.x"
       [style.height.px]="calcResizerHeight"
-      style="width: 4px; background-color: #006db6; position: absolute;right:0%;">
+      style="width: 4px; background-color: #006db6; position: absolute;right:0%;cursor:col-resize">
 </div>
 
 
